--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "npx cypress open"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cypress": "^9.1.0"
+  }
 }
