update test command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Write an end-to-end test using <member-of-cupressacae> and <member-of-cucurbitaceae>",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress open"
+    "test": "npx cypress run"
   },
   "author": "",
   "license": "ISC",
